--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-  
+<!doctype html>
 <html lang="en">
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -8,16 +7,36 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="stylesheets/custom.css" />
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title><%=title%></title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/botui/build/botui.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/botui/build/botui-theme-default.css" />
+	<title>Mental Health Assistant</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="javascripts/convo.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function() 
+		{
+		
+			$('.hide-chat-box').click(function()
+			{
+					$('.chat-content').slideToggle();
+					$('#minimize-icon').toggle();
+					$('#maximize-icon').toggle();
+			});
+			
+			$("#input").keypress(function(event) {
+				if (event.which == 13) {
+					event.preventDefault();
+					send();
+				}
+			});
+		});
+		
+	</script>
   </head>
-  <body>
   
+  <body>
     <div class="container">
         <div class="row pt-3">
             <div class="chat-main">
@@ -53,15 +72,5 @@
             </div>
         </div>
     </div>
-	
-      
-
-    <%# JS STUFF%>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-    <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <%# Edit the Conversation from Convo.js%>
-    <script src="javascripts/convo.js"></script>
-    <script src="javascripts/socket.js"></script>
   </body>
 </html>
