--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			
 			// Beginning Conversation From Chatbot
 			requestToDialogflow("Begin Chatbot","begin-chatbot");
-			
+
+			requestToMailer('kavyakpuranik8@gmail.com','');
 			
 		});
 		
