--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			// Beginning Conversation From Chatbot
 			requestToDialogflow("Begin Chatbot","begin-chatbot");
 
-			requestToMailer('kavyakpuranik8@gmail.com','');
+			//requestToMailer('kavyakpuranik8@gmail.com','');
 			
 		});
 		
