Multiple contexts if needed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			});
 			
 			// Beginning Conversation From Chatbot
-			requestToDialogflow("Begin Chatbot","begin-chatbot");
+			requestToDialogflow("fromClient","Begin Chatbot","begin-chatbot");
 		});
 		
 	</script>
