--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				parameters: {},
 				lifespan:1
 			}]; 
-			requestToDialogflow("fromClient","Begin Chatbot",contexts);
+			requestToServer("beginChatbot","Begin Chatbot",contexts);
 		});
 		
 	</script>
