--- a/chatbot.html
+++ b/chatbot.html
@@ -3,21 +3,25 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/custom.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
+	
 	<title>Mental Health Assistant</title>
+	
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="css/chatbox.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
     <script src="/socket.io/socket.io.js"></script>
     <script src="javascripts/convo.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() 
 		{
-		
+			
+        $('.hide-chat-box').click(function(){
+            $('#chatbot-iframe', window.parent.document).remove();
+
+             });
 			$('.hide-chat-box').click(function()
 			{
 					$('.chat-content').slideToggle();
@@ -41,27 +45,28 @@
 			}]; 
 			requestToServer("beginChatbot","Begin Chatbot",contexts);
 		});
-		
 	</script>
+	
   </head>
   
-  <body>
-            <div class="chat-main">
-                <div class="col-md-12 chat-header rounded-top bg-primary text-white">
+  <body class="chat-main">
+                <div class="col-md-12 chat-header bg-primary text-white">
                     <div style="height:25px;padding-top:3px"  class="row">
-                        <div class="col-md-8 username pl-2">
+                        <div class="col-sm-9 username pl-2">
                             <i class="fa fa-circle text-success" aria-hidden="true"></i>
-                            <h6 class="m-0">Mental Health Assistant</h6>
+                            <span>Nimhans Mental Health Assistant</span>
                         </div>
-                        <div class="col-md-4 options text-right pr-2">
-                            <i style="color:white;font-size:20px" class="fa fa-home tooltipicon" onclick="home()">
+                        <div class="col-sm-3 options text-right pr-2">
+                            <i style="color:white;font-size:15px;padding-bottom:3px" class="tooltipicon" onclick="home()">
+								<span class="fa-fw select-all fas"></span>
 								<span class="tooltiptext" style="white-space: nowrap;">Home</span>
 							</i>
-                            <i style="color:white;font-size:20px" class="fa fa-link tooltipicon" onclick="usefulLinks()">
+                            <i style="color:white;font-size:15px;padding-bottom:3px" class="tooltipicon" onclick="usefulLinks()">
+								<span class="fa-fw select-all fas"></span>
 								<span class="tooltiptext" style="white-space: nowrap;">Useful Links</span>
 							</i>
-                            <i id="minimize-icon" class="fa fa-window-minimize hide-chat-box" aria-hidden="true"></i>
-                            <i id="maximize-icon" style="display: none;" class="fa fa-window-maximize hide-chat-box" aria-hidden="true"></i>
+                            <i id="minimize-icon" class="fa fa-window-minimize" aria-hidden="true"></i>
+                            <i id="maximize-icon" style="display: none;" class="fa fa-window-maximize" aria-hidden="true"></i>
                           </div>
                     </div>
                 </div>
@@ -74,6 +79,5 @@
                         <input id="input" type="text" class="pl-0 pr-0 w-100" placeholder="Type a message..." />
                     </div>
                 </div>
-            </div>
   </body>
 </html>
