--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,8 +20,14 @@
 			  $('#chatbot-maximize').hide();
 			});
 		});
+		function alertSrc(pushd)
+		{
+			var CurrentUrl = pushd.src;
+			console.log(CurrentUrl);
+		}
+		
 	</script>
-<iframe src="http://localhost:8080/pushd" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:0;">
+<iframe id="pushd-iframe" src="http://localhost:8080/pushd" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:0;" onLoad="alertSrc(this);">
     Your browser doesn't support iframes
 </iframe>
 <iframe id="chatbot-iframe" class="chat-main" src="http://localhost:3000/chatbot">
