hospital data updated and Home butoon Welcome Quote updated for guest user

--- a/server/chatbot.html
+++ b/server/chatbot.html
@@ -19,7 +19,8 @@
 			    if (navigator.geolocation) {
 			        navigator.geolocation.getCurrentPosition(showPosition);
 			    } else { 
-			        
+
+			        // To be done !!!
 			    }
 			}
 	</script>
@@ -85,8 +86,8 @@
                         <ul id="response" class="p-0">
                         </ul>
                     </div>
-                    <div class="col-md-12 message-box border pl-2 pr-2 border-top-0">
-                        <input id="input" type="text" class="pl-0 pr-0 w-100" placeholder="Type a message..." />
+                    <div class="col-md-12 message-box border pl-2 pr-2 border-top-0"> 	
+                    	<input id="input" type="text" class="pl-0 pr-0 w-100" placeholder="Type a message..." />
                     </div>
                 </div>
   </body>
