--- a/server/chatbot.html
+++ b/server/chatbot.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript">
 			function getLocation() {
 			    if (navigator.geolocation) {
-			        navigator.geolocation.getCurrentPosition(showPosition);
+			        navigator.geolocation.getCurrentPosition(showPosition, showError);
 			    } else { 
 
 			        // To be done !!!
