--- a/server/src/main/webapp/pushd.html
+++ b/server/src/main/webapp/pushd.html
@@ -5,8 +5,24 @@
     <link rel="stylesheet" type="text/css" href="css/chatbox.css" />
 	<script>
 		var currUserId = null;
+		function readTextFile(file, callback) {
+		    var rawFile = new XMLHttpRequest();
+		    rawFile.overrideMimeType("application/json");
+		    rawFile.open("GET", file, true);
+		    rawFile.onreadystatechange = function() {
+		        if (rawFile.readyState === 4 && rawFile.status == "200") {
+		            callback(rawFile.responseText);
+		        }
+		    }
+		    rawFile.send(null);
+		}
+
 		$(document).ready(function() 
 		{
+			readTextFile("./conf/config.json", function(text){
+			    var data = JSON.parse(text);
+			    console.log(data);
+			});
 			$('#chatbot-maximize').hide();
 			  
 			$('#chatbot-minimize').click(function() 
