--- a/server/src/main/webapp/pushd.html
+++ b/server/src/main/webapp/pushd.html
@@ -6,12 +6,15 @@
 	<script>
 		var currUserId = null;
 		var config = null;
-		function readTextFile(file, callback) {
+		function readTextFile(file, callback) 
+		{
 		    var rawFile = new XMLHttpRequest();
 		    rawFile.overrideMimeType("application/json");
 		    rawFile.open("GET", file, true);
-		    rawFile.onreadystatechange = function() {
-		        if (rawFile.readyState === 4 && rawFile.status == "200") {
+		    rawFile.onreadystatechange = function() 
+		    {
+		        if (rawFile.readyState === 4 && rawFile.status == "200") 
+		        {
 		            callback(rawFile.responseText);
 		        }
 		    }
@@ -23,7 +26,6 @@
 			readTextFile("./conf/config.json", function(text)
 			{
 			    config = JSON.parse(text);
-			    alert(text);
 				currUserId = document.getElementById('pushd-iframe').contentWindow.userId;
 				$('#chatbot-iframe').attr('src',config.chatbot_url + '?userid='+currUserId);
 			});
