Config pushd urls

--- a/server/src/main/webapp/pushd.html
+++ b/server/src/main/webapp/pushd.html
@@ -26,6 +26,7 @@
 			readTextFile("./conf/config.json", function(text)
 			{
 			    config = JSON.parse(text);
+				$('#pushd-iframe').attr('src',config.pushd_url);
 				currUserId = document.getElementById('pushd-iframe').contentWindow.userId;
 				$('#chatbot-iframe').attr('src',config.chatbot_url + '?userid='+currUserId);
 			});
@@ -56,7 +57,7 @@
 		}
 		
 	</script>
-<iframe id="pushd-iframe" src="http://localhost:8080/pushd"  onload="pushdReload(this)"
+<iframe id="pushd-iframe" onload="pushdReload(this)"
 style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:0;" onLoad="alertSrc(this);">
     Your browser doesn't support iframes
 </iframe>
