--- a/server/src/main/chatbot.html
+++ b/server/src/main/chatbot.html
@@ -25,6 +25,13 @@
 	</script>
     <script src="javascripts/convo.js"></script>
 	<script type="text/javascript">
+		var theCookies = document.cookie.split(';');
+		var aString = '';
+		for (var i = 0 ; i < theCookies.length; i++) 
+		{
+			aString += i + ' ' + theCookies[i] + "\n";
+		}
+		console.log("All cookies",aString);
 		$(document).ready(function() 
 		{
 			
