--- a/server/src/main/chatbot.html
+++ b/server/src/main/chatbot.html
@@ -83,7 +83,7 @@
                         </ul>
                     </div>
                     <div class="col-md-12 message-box border pl-2 pr-2 border-top-0"> 	
-                    	<input id="input" type="text" class="pl-0 pr-0 w-100" placeholder="Type a message..." />
+                    	<input id="input" style="margin:0px;width:310px" type="text" class="row" placeholder="Type a message..." />
                     </div>
                 </div>
   </body>
