suicide emergency handling pushing partially done code

--- a/server/src/main/chatbot.html
+++ b/server/src/main/chatbot.html
@@ -17,11 +17,13 @@
 			function getLocation() {
 			    if (navigator.geolocation) {
 			        navigator.geolocation.getCurrentPosition(showPosition, showError);
-			    } else { 
-
-			        // To be done !!!
-			    }
+			    } 
 			}
+            function getLocationEmergency() {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(showPositionEmergency, showError);
+                } 
+            }
 	</script>
     <script src="javascripts/convo.js"></script>
 	
