--- a/meha/src/main/chatbot.html
+++ b/meha/src/main/chatbot.html
@@ -30,6 +30,11 @@
   </head>
   
   <body class="chat-main">
+                <div style="background-color: #fcf8e3;text-align:center" class="col-sm-12 username pl-2">
+                    <span class="text-muted">
+						<small>	To restart the conversation, click on the HOME icon</small>
+					</span>
+                </div>
                 <div class="col-md-12 chat-header bg-primary text-white">
                     <div style="height:25px;padding-top:3px"  class="row">
                         <div class="col-sm-9 username pl-2">
